--- a/documents/Java/锁.md
+++ b/documents/Java/锁.md
@@ -6,7 +6,11 @@
 
       `synchronized` 同步块对同一条线程来说是可重入的, 不会出现把自己锁死的情况; 同步块在已进入的线程执行完之前, 会阻塞后面其它线程的进入.
 
-2. 队列同步器实现锁:
+2. TODO :
+
+    lock(), lockInterruptlly() 的区别
+
+3. 队列同步器实现锁:
 
     队列同步器使用一个 `int` 类型的成员变量表示同步状态. 实现原理是依赖硬件的原子性 CAS 指令来完成对状态的更新, 成功更新该状态即可表示对锁的获取(太尼玛机智了), 对于没能获取到锁的线程则将它们阻塞掉, 使它们无法被调度器调度. 当占有线程的锁释放锁之后, 将阻塞的线程唤醒, 又让它们去更改状态.
 
@@ -17,45 +21,45 @@
             ```java
             class Mutext implements Lock {
                 private final Sync sync = new Sync();
-    
+
                 public void lock() {
                 sync.acquire(1);
                 }
-    
+
                 public boolean tryLock() {
                 return sync.tryAcquire(1);
                 }
-    
+
                 public void unlock() {
                 sync.release(1);
                 }
-    
+
                 publc Condition newCondition() {
                 return sync.newCondition();
                 }
-    
+
                 public boolean isLocked() {
                 return sync.isHeldExclusively();
                 }
-    
+
                 public boolean hasQueuedThreads() {
                 return sync.hasQueuedThreads();
                 }
-    
+
                 public void lockInterruptibly throws InterruptedException {
                 sync.acquireInterruptibly(1);
                 }
-    
+
                 public boolean tryLock(long timeOut, TimeUnit unit) throws InterruptedException {
                 return sync.tryAcquireNanos(1, unit.toNanos(timeout));
                 }
-    
+
                 private static class Sync extends AbstractQueuedSynchronizer {
                     // 锁是否处于占用状态
                     protected boolean isHeldExclusively() {
                     return getState() == 1;
                     }
-    
+
                     public boolean tryAcquire(int acquires) {
                         /* 
                          * 这里通过底层的原子性 CAS 指令来更新状态, 一旦状态更新成功, 
@@ -86,7 +90,7 @@
                 }
         }
             ```
-    
+
         * 实现原理:
         
             - 获取锁:
@@ -235,9 +239,9 @@
                 
         
     * 共享锁: 共享锁允许多个线程获取锁
-    
+
         * 自定义共享锁:
-    
+
             ```java
             public class TwinsLock implements Lock {
                 private final Sync sync = new Sync(2);
@@ -285,12 +289,12 @@
                 }
             }
             ```
-    
+
             
-    
+
     - 排它重入锁: 该锁能够支持一个线程对资源的重复加锁. 先对锁进行获取的请求一定先被满足, 则锁是公平的; 反之, 是不公平的. `ReentrantLock` 是 Java 提供的可重入锁.
         - 非公平获取锁:
-    
+
             ```java
             final boolean nonfairTryAcquire(int acquires) {
                 final Thread current = Thread.currentThread();
@@ -317,9 +321,9 @@
                 return false;
             }
             ```
-    
+
         * 公平获取锁:
-    
+
             ```java
             protected final boolean tryAcquire(int acquires) {
                 final Thread current = Thread.currentThread();
@@ -363,13 +367,13 @@
                 return free;
             }
             ```
-    
+
     * 读写锁: 
-    
-        读写锁维护一个读锁和一个写锁. 读锁是一个支持**重进入的共享锁**, 写锁是一个支持**重进入的拍它锁**. Java 提供了 `ReentrantReadWriteLock`.
-    
+
+        读写锁维护一个读锁和一个写锁. 读锁是一个支持**重进入的共享锁**, 写锁是一个支持**重进入的排它锁**. Java 提供了 `ReentrantReadWriteLock`.
+
         - 使用示例:
-    
+
             ```java
             public class Cache {
                 static Map<String, Object> map = new HashMap<>();
@@ -405,13 +409,13 @@
                 }
             }
             ```
-    
+
         - 实现原理:
-    
+
             将状态变量进行分割, 高 16 位表示读锁状态, 低 16 位表示写锁状态.
-    
+
             * 写锁的获取: 若当前线程已经获取了写锁, 则增加写状态; 若读锁已经被获取或者该线程不是已经获取写锁的线程, 则进入等待状态.
-    
+
                 ```java
                 protected final boolean tryAcquire(int acquires) {
                     Thread current = Thread.currentThread();
@@ -438,11 +442,11 @@
                     return true;
                 }
                 ```
-    
+
                 
-    
+
             - 读锁的获取:
-    
+
                 ```Java
                 protected final int tryAcquireShared(int unused) {
                 	for(;;) {
@@ -461,9 +465,9 @@
                     }
                 }
                 ```
-    
+
     * 锁降级: 把持住当前拥有的写锁, 在获取到读锁, 随后释放写锁的过程
-    
+
         ```java
         public void processData() {
             readLock.lock();
@@ -489,5 +493,5 @@
             }
         }
         ```
-    
+
         
