add new questions

--- a/documents/Java/锁.md
+++ b/documents/Java/锁.md
@@ -6,9 +6,19 @@
 
       `synchronized` 同步块对同一条线程来说是可重入的, 不会出现把自己锁死的情况; 同步块在已进入的线程执行完之前, 会阻塞后面其它线程的进入.
 
-2. TODO :
+2. lock(), lockInterruptlly() 的区别
 
-    lock(), lockInterruptlly() 的区别
+    ```java
+    public final void acquireInterruptibly(int arg) throws InterruptedException {
+        // 这里会响应中断信号
+    	if (Thread.interrupted())
+    		throw new InterruptedException();
+        if (!tryAcquire(arg))
+            doAcquireInterruptibly(arg);
+    }
+    ```
+
+    
 
 3. 队列同步器实现锁:
 
@@ -23,41 +33,41 @@
                 private final Sync sync = new Sync();
 
                 public void lock() {
-                sync.acquire(1);
+                	sync.acquire(1);
                 }
 
                 public boolean tryLock() {
-                return sync.tryAcquire(1);
+                	return sync.tryAcquire(1);
                 }
 
                 public void unlock() {
-                sync.release(1);
+                	sync.release(1);
                 }
 
                 publc Condition newCondition() {
-                return sync.newCondition();
+                	return sync.newCondition();
                 }
 
                 public boolean isLocked() {
-                return sync.isHeldExclusively();
+                	return sync.isHeldExclusively();
                 }
 
                 public boolean hasQueuedThreads() {
-                return sync.hasQueuedThreads();
+                	return sync.hasQueuedThreads();
                 }
 
                 public void lockInterruptibly throws InterruptedException {
-                sync.acquireInterruptibly(1);
+                	sync.acquireInterruptibly(1);
                 }
 
                 public boolean tryLock(long timeOut, TimeUnit unit) throws InterruptedException {
-                return sync.tryAcquireNanos(1, unit.toNanos(timeout));
+                	return sync.tryAcquireNanos(1, unit.toNanos(timeout));
                 }
 
                 private static class Sync extends AbstractQueuedSynchronizer {
                     // 锁是否处于占用状态
                     protected boolean isHeldExclusively() {
-                    return getState() == 1;
+                    	return getState() == 1;
                     }
 
                     public boolean tryAcquire(int acquires) {
@@ -69,7 +79,7 @@
                             setExclusiveOwnerThread(Thread.currentThread());
                             return true;
                         }
-            return false;
+            			return false;
                     }
             
                     protected boolean tryRelease(int releases) {
@@ -81,7 +91,7 @@
                         // 因为永远只能有一个线程获取到锁, 只会有一个线程调用该方法,
                         // 不存在多线程竞争的关系
                         setState(0);
-            return true;
+            			return true;
                     }
             
                     Condition newCondition() {
@@ -494,4 +504,117 @@
         }
         ```
 
+    * Condition 实现原理
+
+        - 等待队列: 线程调用 `Condition#await()` 方法导致该线程释放锁, 进入等待队列(从队列角度看是同步队列的头结点进入了等待队列中).
+        - 并发包中的 Lock 拥有一个同步队列和多个等待队列(因为 Condition 可能有多个)
+        - 调用 `Condition#signal() 方法` 将会唤醒在等待队列中等待时间最长的结点, 在唤醒结点之前, 会将结点移动到同步队列中.
+        - 从 `await()`  方法中醒来的线程已经成功获取了锁.
+
+    * 阻塞队列实现原理
+
+        - ArrayBlockingQueue: 由数组结构组成的有界阻塞队列
+        - LinkedBlockingQueue: 由链表结构组成的有界阻塞队列
+        - PriorityBlockingQueue: 一个支持优先级排序的无界阻塞队列
+        - DelayQueue:  支持延时获取元素的无界阻塞队列, 队列中的元素必须实现 Delayed 接口, 在创建元素时可以指定多久才能从当前队列获取元素.
+          - 缓存系统的设计: 可以用 DelayQueue 保存缓存元素, 使用线程循环查询 DelayQueue, 一旦能获取元素时, 表示缓存有效期到了.
+          - 定时任务调度: 使用 DelayQueue 保存当天将会执行的任务和执行时间, 一旦从 DelayQueue 中获取到任务就开始执行.
+
+        ```java
+        public ArrayBlockingQueue(int capacity, boolean fair) {
+            if (capacity <= 0)
+                throw new IllegalArgumentException();
+            this.items = new Object[capacity];
+            lock = new ReentrantLock(fair);
+            notEmpty = lock.newCondition();
+            notFull =  lock.newCondition();
+        }
         
+        public void put(E e) throws InterruptedException {
+            checkNotNull(e);
+            final ReentrantLock lock = this.lock;
+            lock.lockInterruptibly();
+            try {
+                while (count == items.length)
+                    // 队列满等待
+                    notFull.await();
+                enqueue(e);
+            } finally {
+                lock.unlock();
+            }
+        }
+        
+        private void enqueue(E x) {
+            // assert lock.getHoldCount() == 1;
+            // assert items[putIndex] == null;
+            final Object[] items = this.items;
+            items[putIndex] = x;
+            if (++putIndex == items.length)
+                putIndex = 0;
+            count++;
+            // 存放了数据, 通知等待的 take() 方法可以取数据了
+            notEmpty.signal();
+        }
+        
+        public E take() throws InterruptedException {
+            final ReentrantLock lock = this.lock;
+            lock.lockInterruptibly();
+            try {
+                while (count == 0)
+                    /// 队列空等待
+                    notEmpty.await();
+                return dequeue();
+            } finally {
+                lock.unlock();
+            }
+        }
+        
+        private E dequeue() {
+            // assert lock.getHoldCount() == 1;
+            // assert items[takeIndex] != null;
+            final Object[] items = this.items;
+            @SuppressWarnings("unchecked")
+            E x = (E) items[takeIndex];
+            items[takeIndex] = null;
+            if (++takeIndex == items.length)
+                takeIndex = 0;
+            count--;
+            if (itrs != null)
+                itrs.elementDequeued();
+            // 取走了元素, 通知等待的 put() 方法可以存放数据了
+            notFull.signal();
+            return x;
+        }
+        ```
+
+    * Fork/Join 实现原理
+
+        任务分割出的子任务会添加到当前工作线程所维护的双端队列中, 进入队列的头部. 当一个工作线程的队列暂时没有任务时, 它会随机从其它工作线程的队列的尾部获取一个任务.
+
+        * ForkJoin 关键是在于它需要实现 `compute()` 方法, 在该方法中需要对任务进行判断, 如果任务足够小则直接执行; 反之则对任务进行拆分.
+
+        * ForkJoinWorkerThread: 内部有所属的 ForkJoinPool 和 ForkJoinPool.WorkQueue; 在构造方法中将自己注册到 ForkJoinPool 中
+
+            ```java
+            this.pool = pool;
+            this.workQueue = pool.registerWorker(this);
+            // 返回一个工作队列, 属于该线程
+            WorkQueue w = new WorkQueue(this, wt);
+            // 将该工作队列保存到 ForkJoinPool 的队列数组里面
+            ws[i] = w;
+            ```
+
+        *  ForkJoinTask#fork()
+
+            ```java
+            Thread t;
+            if ((t = Thread.currentThread()) instanceof ForkJoinWorkerThread)
+                // 后续调用
+            	((ForkJoinWorkerThread)t).workQueue.push(this);
+            else
+                // 第一次调用
+            	ForkJoinPool.common.externalPush(this);
+            return this;
+            ```
+
+            
