--- a/documents/algrithm/swordoffer/重建二叉树.md
+++ b/documents/algrithm/swordoffer/重建二叉树.md
@@ -93,6 +93,7 @@ public class Solution {
         int preEnd = pre.length;
         int inStart = 0;
         int inEnd = pre.length;
+        // 这里通过 while 循环和栈去模拟递归构建子树的操作
         while (count != 0) {
             inStart = boundary.pop();
             inEnd = boundary.pop();
