--- a/documents/test/测试框架原则.md
+++ b/documents/test/测试框架原则.md
@@ -1,3 +1,29 @@
+##### 测试类型
+
+- 集成测试(Integration Testing)
+
+- 功能测试(Functional Testing)
+
+- 负载测试(Stress/Load Testing)
+
+    JMeter 工具
+
+- 验收测试(Acceptance Testing)
+
+##### 单元测试分类
+
+- 逻辑单元测试(Logic Unit Testing)
+
+    测试某个方法。
+
+- 集成单元测试(Integeration Unit Testing)
+
+    测试模块之间的调用。
+
+- 功能单元测试(Functional Unit Testing)
+
+    测试功能是否符合预期。
+
 ##### 原则
 
 - 每个单元测试都必须独立于其它所有单元测试而运行。
